# deep-learning-bechmarks

./: .gitignore  setup.cfg
benchmarks/: benchmark.py  evaluate.py  pytorch.py
deep_learning_benchmarks/: benchmark.py  evaluate.py  openvino.py  pytorch.py
