[metadata]
name = deep_learning_benchmarks
version = 0.0.0
description = Benchmarking tool for deep learning models in different frameworks
long_description = file: README.md

[options]
include_package_data = True
packages = find_namespace:
install_requires =
  click
  numpy
  torch
  torchvision

[options.extras_require]
dev =
  flake8
  black
intel =
  openvino
  openvino-dev[onnx]